para_se_basear/Trab_Anna/CodeGeneration/Tests/Error/19.AMZ
void main() {
	switch("a") {
    case(1) {}
    case(["a"]) {}
    default {}
  }

  switch([1]) {
    default {}
  }
}
